[project]
name = "ai-trip-planner"
version = "0.1.0"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-experimental",
    "fastapi",
    "python-dotenv",
    "streamlit",
    "uvicorn",
    "pydantic",
    "httpx",
    "requests",
    "langchain_google_community",
    "langchain_tavily",
    "langchain_groq",
    "langchain_openai",
    "langgraph"
]

[tool.setuptools]
packages = []